--- a/Backend/.env
+++ b/Backend/.env
@@ -1,1 +1,3 @@
 MONGODB_URI= mongodb+srv://1cgudimella:vamsi29@answersai.eha01xl.mongodb.net/
+HF_API_KEY= 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
+JWT_SECRET = do_not_disturb_me
